@@ -64,3 +64,11 @@ northd_output_mac_binding_aging_handler(struct engine_node *node,
     engine_set_node_state(node, EN_UPDATED);
     return true;
 }
+
+bool
+northd_output_fdb_aging_handler(struct engine_node *node,
+                                void *data OVS_UNUSED)
+{
+    engine_set_node_state(node, EN_UPDATED);
+    return true;
+}
